[tool.poetry]
name = "gong"
version = "0.1.1"
description = "Small Python SDK to interact with gong.io"
authors = ["Jim Rosser <me@j4r.wtf>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"